Implement Cloudflare File API phase 2
